--- a/index.html
+++ b/index.html
@@ -12,18 +12,40 @@
   <link href="assets/img/logo.png" rel="icon">
   <link href="assets/img/logo.png" rel="apple-touch-icon">
 
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Optimized Google Fonts loading -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap&family=Raleway:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet"
+        media="print"
+        onload="this.media='all'">
 
-  <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Defer non-critical CSS -->
+  <link rel="stylesheet" href="assets/vendor/aos/aos.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/vendor/boxicons/css/boxicons.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/css/style.css" media="print" onload="this.media='all'">
+
+  <!-- Fallback for no-JS -->
+  <noscript>
+    <link rel="stylesheet" href="assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="assets/vendor/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
+    <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+  </noscript>
+    <!-- Critical CSS -->
+    <style>
+      /* Add critical above-the-fold styles here */
+      body { margin: 0; font-family: 'Open Sans', sans-serif; }
+    </style>
 </head>
 
 <body>
@@ -662,6 +684,27 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
   <script src="assets/js/main.js"></script>
+
+  <!-- Optimize JavaScript loading -->
+  <script>
+    // Defer non-critical JavaScript
+    function loadScript(src) {
+      return new Promise((resolve, reject) => {
+        const script = document.createElement('script');
+        script.src = src;
+        script.async = true;
+        script.onload = resolve;
+        script.onerror = reject;
+        document.body.appendChild(script);
+      });
+    }
+
+    // Load scripts after page load
+    window.addEventListener('load', function() {
+      loadScript('assets/vendor/bootstrap/js/bootstrap.bundle.js');
+      // Add other script loads here
+    });
+  </script>
 
 </body>
 
