update index.html and vn.html with experience

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p><i class="bi bi-chevron-right"></i>I have more than 2 years of experience in application development as a
-            Backend Engineer, primarily utilizing Ruby on Rails. Additionally, I have 1 year of experience with NestJs
+          <p><i class="bi bi-chevron-right"></i>I have experience in application development as a
+            Backend Engineer, primarily utilizing Ruby on Rails. Additionally, I have  experience with NestJs
             in outsourced projects.</p>
           <p><i class="bi bi-chevron-right"></i> I have the ability to quickly adapt and learn new languages to meet the
             needs of different projects.</p>
