--- a/vn.html
+++ b/vn.html
@@ -192,7 +192,7 @@
 
         <div class="section-title">
           <h2>Kỹ Năng</h2>
-          <p><i class="bi bi-chevron-right"></i> Hơn 2 năm kinh nghiệm trong phát triển ứng dụng vai trò Backend Engineer bằng Ruby on Rails và 1 năm kinh nghiệm với NestJs dự án OutSource.</p>
+          <p><i class="bi bi-chevron-right"></i> Kinh nghiệm trong phát triển ứng dụng vai trò Backend Engineer bằng Ruby on Rails và NestJs dự án OutSource.</p>
           <p><i class="bi bi-chevron-right"></i> Khả năng tự tìm hiểu và linh hoạt thay đổi ngôn ngữ đảm bảo yêu cầu của các dự án khác nhau.</p>
         </div>
 
